# CMakeTemplateDocker

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.alpine  Makefile  README.md
.devcontainer/: devcontainer.json  postCreateScript.sh
.github/workflows/: c-cpp.yml  dependabot-pr.yaml
Makefiles/: debug.mk  rules.mk
cfg/: .env  docker.mk
cmakedockertemplate/: CMakeLists.txt
cmakedockertemplate/lib/memlib/: CMakeLists.txt
cmakedockertemplate/lib/memlib/inc/: memlib.h
cmakedockertemplate/src/: main.cpp
cmakedockertemplate/test/: CMakeLists.txt
dockerfiles/: Dockerfile.alpine  Dockerfile.debug
inc/: main.h  utils.h
lib/mathlib/: CMakeLists.txt
lib/mathlib/inc/: addition.h  division.h
lib/mathlib/src/: addition.cpp  division.cpp
lib/memlib/inc/: memlib.h
lib/printlib/: CMakeLists.txt
lib/printlib/inc/: print_result.h
lib/printlib/src/: print_result.cpp
snippets/: c_cpp.code-snippets
src/: main.cpp
test/: CMakeLists.txt
test/src/: sample_test.cpp
